--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 /*************************/
 /*---------HEADER--------*/
 /*************************/
@@ -47,6 +45,7 @@
 .main-nav-link.nav-cta:hover,
 .main-nav-link.nav-cta:active {
   background-color: #cf711f;
+  transform: translateY(-0.5rem);
 }
 
 /**********************/
@@ -89,6 +88,7 @@
   padding: 1.6rem 3.2rem;
   border-radius: 9px;
   transition: all 0.5s;
+
 }
 
 .btn--full:link,
@@ -100,6 +100,7 @@
 .btn--full:hover,
 .btn--full:active {
   background-color: #cf711f;
+  transform: translateY(-0.5rem);
 }
 
 
@@ -168,7 +169,8 @@
   width: 35%;
   z-index: 2;
 }
-.step-img-box{
+
+.step-img-box {
   position: relative;
   display: flex;
   justify-content: center;
@@ -176,26 +178,31 @@
 }
 
 .step-img-box::before,
-.step-img-box::after{
+.step-img-box::after {
   content: "";
   display: block;
   border-radius: 50%;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
 }
 
-.step-img-box::before{
+.step-img-box::before {
   width: 60%;
   padding-bottom: 60%;
   background-color: #fdf2e9;
   z-index: 0;
 
 }
-.step-img-box::after{
+
+.step-img-box::after {
   width: 45%;
   padding-bottom: 50%;
   background-color: #fae5d3;
   z-index: 1;
+}
+
+strong {
+  font-weight: 600;
 }
