--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@
   background-color: #fdf2e9;
   /*temporary*/
   height: 9.6rem;
-  padding: 0 4.6rem;
+  padding: 0 4.8rem;
+  position: relative;
 }
 
 .main-nav-list {
@@ -80,6 +81,13 @@
 /*************************/
 /*------- BUTTON-------*/
 /*************************/
+
+
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+}
 
 .btn,
 .btn:link,
@@ -227,4 +235,25 @@
 
 strong {
   font-weight: 600;
+}
+
+/*************************/
+/*------- MOBILE-------*/
+/*************************/
+
+
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: none;
+}
+
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
 }
