--- a/CSS/geral.css
+++ b/CSS/geral.css
@@ -56,6 +56,7 @@
 html {
   font-size: 62.5%;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -64,6 +65,7 @@ body {
   font-weight: 400;
   color: #333;
   overflow-x: hidden;
+
 }
 
 /****************************/
@@ -531,7 +533,7 @@ body {
   background-size: cover;
   background-position: center;
   background-image: linear-gradient(to right bottom, rgb(235, 151, 78, 0.5),
-      rgb(230, 125, 34, 0.5)), url(img/eating.jpg);
+  rgb(230, 125, 34, 0.5)), url(../img/eating.jpg);
   ;
 }
 
@@ -647,4 +649,25 @@ body {
 
 .address {
   margin-bottom: 2.4rem;
+}
+
+/***************************/
+/*---STICKY NAVIGATION----*/
+/*************************/
+
+.sticky .header {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 8rem;
+  padding-top: 0;
+  padding-bottom: 0;
+  background-color: rgba(255,255,255,0.97);
+  z-index: 999;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+}
+
+.sticky .section-hero {
+  margin-top: 9.6rem;
 }
